k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-stb-api
  namespace: mltru-com
spec:
  type: ClusterIP
  selector:
    app: my-stb-api
  ports:
    - name: http
      port: 8080
      targetPort: http
---
apiVersion: v1
kind: Service
metadata:
  name: my-stb-front
  namespace: mltru-com
spec:
  type: ClusterIP
  selector:
    app: my-stb-front
  ports:
    - name: http
      port: 80
      targetPort: http
